# rules

./: .gitignore  .package.swp  .prettierignore  .prettierrc.json  AGENTS.md  AUTOMOVE_IDEAS.md  Cargo.toml  HOW_TO_ITERATE_ON_AUTOMOVE.md  README.md  eslint.config.js  mons-rules.d.ts  package-lock.json  package.json  publish.sh  tsconfig.build.json  tsconfig.json  vitest.config.ts
docs/: automove-archive.md  automove-dense-pareto-pairnet-v1-source-coverage-precommit.json  automove-dense-pareto-pairnet-v1-source-coverage-result.json  automove-dense-pareto-pairnet-v2-joint-source-precommit.json  automove-dense-pareto-pairnet-v2-joint-source-result.json  automove-dense-pareto-pairnet-v3-dual-reserve-precommit.json  automove-dense-pareto-pairnet-v3-dual-reserve-result.json  automove-frontier-pro-v10-bounded-tactical-promotion-result.json  automove-frontier-pro-v4-bounded-recursive-quiescence-implementation-freeze.json  automove-frontier-pro-v4-bounded-recursive-quiescence-invalid-activation-run.json  automove-frontier-pro-v4-bounded-recursive-quiescence-precommit.json  automove-frontier-pro-v4-bounded-recursive-quiescence-result.json  automove-frontier-pro-v4-completed-depth-equalized-125-relaxed-promotion-precommit.json  automove-frontier-pro-v4-completed-depth-equalized-125-relaxed-promotion-result.json  automove-frontier-pro-v4-completed-depth-median-relaxed-promotion-precommit.json  automove-frontier-pro-v4-completed-depth-median-relaxed-promotion-result.json  automove-frontier-pro-v4-guarded-deep-iterative-promotion-implementation-freeze.json  automove-frontier-pro-v4-guarded-deep-iterative-promotion-precommit.json  (+39 more)
scripts/: bump.sh  (+23 more)
(+130 files in other folders)
