[package]
name = "mons-rust"
version = "0.1.132"
edition = "2021"
description = "super metal mons"
license = "CC0-1.0"
repository = "https://github.com/supermetalmons/mons-rust"
readme = "README.md"
exclude = [
  "rules-tests/",
  "rules-tests-chunks/",
  "target/",
  "pkg/",
  ".DS_Store",
  "src/.DS_Store",
  "nohup.out",
]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
