[package]
name = "mons-rust"
version = "0.1.135"
edition = "2021"
publish = false
description = "super metal mons"
license = "CC0-1.0"
repository = "https://github.com/supermetalmons/mons-rust"
readme = false
include = [
  "/src/**/*.rs",
]

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
